--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="p-2 md:p-5 flex justify-between items-center shadow-sm border-2 border-gray-100">
     <div class="">
-        <h1 class="font-Amelaryas text-md md:text-xl ">
+        <h1 [routerLink]="['']" routerLinkActive="router-link-active"  class="cursor-pointer font-Amelaryas text-md md:text-xl ">
             Urban Nest
         </h1>
     </div>
