--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,12 +1,15 @@
 <!-- about-us.component.html -->
 
-<div class="container mx-auto my-10">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div class="md:col-span-1">
-        <img src="https://placekitten.com/800/500" alt="About Us Image" class="w-full h-auto rounded-lg shadow-md">
-      </div>
-      <div class="md:col-span-1">
-        <h2 class="text-3xl font-bold mb-4">Welcome to Urban Nest</h2>
+<div class="container mx-auto my-10 text-justify p-2 sm:p-0">
+  <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+    <div class="md:col-span-1">
+      <img
+        src="https://images.pexels.com/photos/432059/pexels-photo-432059.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+        alt="About Us Image" class="w-full h-auto rounded-lg shadow-md">
+    </div>
+    <div class="md:col-span-1">
+      <h2 class="text-3xl font-bold mb-4 font-Amelaryas ">Welcome to Urban Nest</h2>
+      <div class="font-Poppins text-gray-400 leading-6 my-10">
         <p class="text-gray-700 leading-loose">
           Urban Nest is a renowned name in the world of home decor and lifestyle products. Established in 20XX, we have
           been on a mission to enhance your living spaces with unique and stylish products that stand the test of time.
@@ -17,9 +20,11 @@
         </p>
       </div>
     </div>
-  
-    <div class="mt-8">
-      <h3 class="text-2xl font-bold mb-4">Our Goals and Values</h3>
+  </div>
+
+  <div class="mt-8">
+    <h3 class="text-2xl font-bold mb-4 font-Amelaryas">Our Goals and Values</h3>
+    <div class="font-Poppins text-gray-400 leading-6 my-10">
       <p class="text-gray-700 leading-loose">
         At Urban Nest, our goals are simple yet profound. We aim to:
       </p>
@@ -30,9 +35,12 @@
         <li>Ensure customer satisfaction is at the core of everything we do.</li>
       </ul>
     </div>
-  
-    <div class="mt-8">
-      <h3 class="text-2xl font-bold mb-4">Why Choose Urban Nest?</h3>
+
+  </div>
+
+  <div class="mt-8">
+    <h3 class="text-2xl font-bold mb-4 font-Amelaryas">Why Choose Urban Nest?</h3>
+    <div class="font-Poppins text-gray-400 leading-6 my-10">
       <p class="text-gray-700 leading-loose">
         Choosing Urban Nest means choosing:
       </p>
@@ -43,14 +51,18 @@
         <li>A brand that values your unique style and helps you express it in your living spaces.</li>
       </ul>
     </div>
-  
-    <div class="mt-8">
-      <h3 class="text-2xl font-bold mb-4">Customer Satisfaction</h3>
+  </div>
+
+  <div class="mt-8">
+    <h3 class="text-2xl font-bold mb-4 font-Amelaryas">Customer Satisfaction</h3>
+    <div class="font-Poppins text-gray-400 leading-6 my-10">
       <p class="text-gray-700 leading-loose">
-        Our customers are at the heart of everything we do. We take pride in delivering not just products but experiences
+        Our customers are at the heart of everything we do. We take pride in delivering not just products but
+        experiences
         that exceed expectations. Your satisfaction is our priority, and we are committed to ensuring a delightful
         shopping journey with Urban Nest.
       </p>
     </div>
   </div>
-  
+
+</div>
