--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,9 @@
-<div class="grid md:grid-cols-2 bg-rose-300 place-items-center ">
+<div class="grid md:grid-cols-2 bg-rose-300 place-items-center p-2 sm:p-0 ">
     <div class="py-5 my-10">
         <p class="font-Poppins text-5xl font-semibold">Upto 50% off </p>
         <p class="my-10 font-Poppins md:font-Amsterdam text-3xl font-semibold">Grab the deal Now</p>
     </div>
-    <div class="w-[70%] mx-auto">
+    <div class="w-[70%] mx-auto hidden md:block">
         <img src="../../../assets/images/png/deal.png" alt="grab-deal" class="w-[50%] h-auto object-contain" />
     </div>
 </div>
