cart feature implemented

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -21,7 +21,7 @@
                     </p>
                 </div>
                 <div class="">
-                    <button class="p-3 bg-emerald-500 text-white font-Silka rounded-xl">
+                    <button class="p-3 bg-emerald-500 text-white font-Silka rounded-xl" (click)="cartService.addToCart(item)">
                         Add to Cart
                     </button>
                 </div>
