--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
         <a [routerLink]="['']" routerLinkActive="router-link-active" class="mx-5 font-Poppins">Home</a>
         <a [routerLink]="['/categories']" routerLinkActive="router-link-active" class="mx-5 font-Poppins">Categories</a>
         <a [routerLink]="['/about']" routerLinkActive="router-link-active" class="mx-5 font-Poppins">About</a>
-        <a [routerLink]="['/cart']" routerLinkActive="router-link-active" class="mx-5 font-Poppins"><mat-icon [matBadge]="count"
+        <a [routerLink]="['/cart']" routerLinkActive="router-link-active" class="mx-5 font-Poppins"><mat-icon [matBadge]="cartService.getCount()"
                 matBadgeColor="primary">shopping_cart</mat-icon></a>
     </div>
     <div class="md:hidden flex items-center" (click)="toogleMenu()">
@@ -31,7 +31,7 @@
 
     </div >
     <div class="m-5">
-        <a [routerLink]="['/cart']" routerLinkActive="router-link-active"><mat-icon [matBadge]="count"
+        <a [routerLink]="['/cart']" routerLinkActive="router-link-active"><mat-icon [matBadge]="cartService.getCount()"
                 matBadgeColor="primary">shopping_cart</mat-icon></a>
 
     </div>
